package com.dss.orderingsystemforchef.network.results;

public class LoginResult extends Result {
    private String userID;

    public String getUserID() {
        return userID;
    }

    public void setUserID(String userID) {
        this.userID = userID;
    }
}
